feat: update method
